fix small phone overlapping footer

--- a/src/App.css
+++ b/src/App.css
@@ -88,4 +88,7 @@ input[type="text"]:focus {
     display: flex;
     margin: auto;
   }
+  .footer {
+    margin-top: 15px;
+  }
 }
